# projects

./: .gitignore  README.md  pyproject.toml  requirements.txt  weather.ps1
docs/.obsidian/: workspace.json
docs/学习内容/Agent/: Agent详解.md
docs/学习内容/Python/: 不同项目的文件夹结构.md
docs/学习内容/WeatherAgent/: 未命名.md
docs/学习内容/大模型/: SKILL的使用.md
docs/学习内容/常用Script命令/: Python 虚拟环境管理命令速查表.md
docs/学习内容/常用Script命令/.obsidian/: workspace.json
notebooks/: colon.ipynb  decorators.ipynb  for_next.ipynb  http.ipynb  pack_unpack.ipynb  send_email.ipynb  system.ipynb  test.ipynb  time_server.ipynb
src/search_agent/: main.py
src/weather_agent/: .gitignore  README.md  main.py
src/weather_agent/myapp/plugins/edge_tabs/: plugin.py
src/weather_agent/tests/: test_decorators.ipynb
src/weather_agent/tools/: weather_tool.py
